Fixed dropdown alignment

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -63,6 +63,10 @@ a {
   display:none;
 }
 
+.dropdown-left{
+  left:-70px;
+}
+
 .col-centered{
     float: none;
     margin: 0 auto;
